# vsag

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  data.csv  header.cpp  header.h  testgbm.cpp  train.py
.circleci/: config.yml  fresh_ci_cache.commit
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: asan_build_and_test.yml  lcov.yml
docs/: hgraph_params.md
experiment/: CMakeLists.txt  benchmark_build_index.cpp  constants_path.h  data_loader.h
include/vsag/: PQCodes.h  (+13 more)
mockimpl/: CMakeLists.txt
python/: example.c  setup-requirements.txt  setup.py
python_bindings/: binding.cpp
scripts/: build_pyvsag_multiple_version.sh  check_cov.sh  check_environment.sh  check_format.sh  collect_cpp_coverage.sh  gcov_for_clang.sh  test_asan_bg.sh  test_parallel_bg.sh
src/: CMakeLists.txt  PQCodes.cpp  allocator_wrapper.h  base_filter_functor.h  bitset_impl.cpp  bitset_impl.h  bitset_impl_test.cpp  c.cpp  clustering.cpp  clustering.h  common.h  constants.cpp  data_type.h  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  default_allocator.cpp  default_allocator.h  default_allocator_test.cpp  default_logger.cpp  default_logger.h  default_logger_test.cpp  distances.cpp  engine.cpp  exceptions.h  footer.cpp  footer.h  footer_test.cpp  index_feature_list.cpp  index_feature_list.h  index_feature_list_test.cpp  inner_string_params.h  logger.h  logger_test.cpp  metric_type.h  options.cpp  options_test.cpp  parameter_check.cpp  parameter_generator.cpp  resource.cpp  (+12 more)
src/algorithm/: hgraph.cpp  hgraph.h
src/algorithm/hnswlib/: BlockManager.cpp  BlockManager.h  BlockManager_test.cpp  CMakeLists.txt  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  algorithm_interface.cpp  algorithm_interface.h  block_manager.cpp  block_manager.h  bruteforce.h  hnswalg.cpp  hnswalg.h  hnswalg_static.h  hnswlib.h  space_interface.h  space_ip.h  space_l2.h  stream_reader.cpp  stream_reader.h  stream_writer.cpp  stream_writer.h  visited_list_pool.h
src/data_cell/: CMakeLists.txt  flatten_datacell.h  flatten_datacell_test.cpp  flatten_interface.cpp  flatten_interface.h  flatten_interface_test.cpp  flatten_interface_test.h  graph_datacell.h  graph_datacell_test.cpp  graph_interface.cpp  graph_interface.h  graph_interface_test.cpp  graph_interface_test.h  sparse_graph_datacell.cpp  sparse_graph_datacell.h  sparse_graph_datacell_test.cpp
src/factory/: CMakeLists.txt  factory.cpp  factory_test.cpp
src/impl/: CMakeLists.txt  conjugate_graph.cpp  conjugate_graph.h  conjugate_graph_test.cpp  graph.h  graph_example.cpp
src/index/: CMakeLists.txt  diskann.cpp  diskann.h  diskann_test.cpp  diskann_zparameters.cpp  diskann_zparameters.h  diskann_zparameters_test.cpp  diskann_zserialization.cpp  diskann_zserialization.h  flatten_index.cpp  flatten_index.h  hgraph_index.cpp  hgraph_index.h  hgraph_index_test.cpp  hgraph_zparameters.cpp  hgraph_zparameters.h  hgraph_zparameters_test.cpp  hnsw.cpp  hnsw.h  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp  hnsw_zserialization.cpp  hnsw_zserialization.h  hnsw_zserialization_test.cpp  index_commom_param_test.cpp  index_common_param.cpp  index_common_param.h  json.json  multi_index.cpp  multi_index.h  multi_index_zparameters.cpp  multi_index_zparameters.h  pyramid.cpp  pyramid.h  pyramid_zparameters.cpp  pyramid_zparameters.h
src/io/: basic_io.h  basic_io_test.cpp  basic_io_test.h  file_aio.h  io_headers.h  io_read_object.h  memory_block_io.h  memory_block_io_test.cpp  memory_io.h  memory_io_test.cpp
src/quantization/: computer.h  fp32_quantizer.h  fp32_quantizer_test.cpp  quantizer.h  quantizer_headers.h  quantizer_test.h  scalar_quantization_trainer.cpp  scalar_quantization_trainer.h  simd_test.h  sq4_quantizer.h  sq4_quantizer_test.cpp  sq4_simd.cpp  sq4_simd.h  sq4_uniform_quantizer.h  sq4_uniform_quantizer_test.cpp  sq4_uniform_simd.cpp  sq4_uniform_simd.h  sq8_quantizer.h  sq8_quantizer_test.cpp  sq8_simd.cpp  sq8_simd.h  sq8_simd_test.cpp  sq8_uniform_quantizer.cpp  sq8_uniform_quantizer.h  sq8_uniform_quantizer_test.cpp
src/searcher/: basic_searcher.cpp  basic_searcher.h  basic_searcher_test.cpp
src/serialization/: all_in_one.cpp  all_in_one.h  kv.cpp  kv.h  serializable.h  versioning.h
src/simd/: CMakeLists.txt  avx.cpp  avx512.cpp  avx512_test.cpp  avx_test.cpp  fp32_simd.cpp  fp32_simd.h  fp32_simd_test.cpp  generic.cpp  normalize.cpp  normalize.h  normalize_test.cpp  simd.cpp  simd.h  simd_status.h  simd_test.cpp  sq4_simd.cpp  sq4_simd.h  sq4_simd_test.cpp  sq4_uniform_simd.cpp  sq4_uniform_simd.h  sq4_uniform_simd_test.cpp  sq8_simd.cpp  sq8_simd.h  sq8_simd_test.cpp  sq8_uniform_simd.cpp  sq8_uniform_simd.h  sq8_uniform_simd_test.cpp  sse.cpp  sse_test.cpp
src/storage/: filter_datacell.h  flatten_storage.h  flatten_storage_test.cpp  graph_datacell.h  graph_datacell_test.cpp  graph_datacell_test.h  mix_datacell.h  mix_datacell_test.cpp
src/utils/: resource_object.h  resource_object_pool.h  visited_list.h  visited_list_test.cpp
tests/: CMakeLists.txt  catch2_utils.h  test_diskann.cpp  test_engine.cpp  test_hgraph.cpp  test_hnsw.cpp  test_hnsw_new.cpp  test_index.cpp  test_index.h  test_index_old.cpp  test_multi_thread.cpp  test_pyramid.cpp  test_random_allocator.cpp  test_random_index.cpp  test_vsag_ext.cpp
tests/fixtures/: fixtures.cpp  fixtures.h  test_dataset.cpp  test_dataset.h  test_dataset_pool.cpp  test_dataset_pool.h  test_pool.h  thread_pool.h
tests/performance/: README.md  test_performance.cpp
tools/: CMakeLists.txt  README.md  eval_dataset.cpp  eval_dataset.h  eval_performance.cpp  test_performance.cpp
tools/eval/: CMakeLists.txt  build_eval_case.cpp  build_eval_case.h  duration_monitor.cpp  duration_monitor.h  eval_case.cpp  eval_case.h  eval_dataset.cpp  eval_dataset.h  latency_monitor.cpp  latency_monitor.h  memory_peak_monitor.cpp  memory_peak_monitor.h  monitor.cpp  monitor.h  recall_monitor.cpp  recall_monitor.h  search_eval_case.cpp  search_eval_case.h
(+17 files in other folders)
