
add_executable(benchmark_build_index constants_path.h data_loader.h benchmark_build_index.cpp)
target_link_libraries(benchmark_build_index vsag)

message(${CMAKE_CXX_FLAGS})
message(${CMAKE_CXX_FLAGS})
message(${CMAKE_CXX_FLAGS})
message(${CMAKE_CXX_FLAGS})
message(${CMAKE_CXX_FLAGS})
message(${CMAKE_CXX_FLAGS})